// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollectionCard should not render hasClient 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-4"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-4"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Collection information
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Last check-in
            </dt>
            <dd
              class=""
            >
              01 Jun 2014
            </dd>
            <dt
              class=""
            >
              Registered
            </dt>
            <dd
              class=""
            >
              01 Apr 2014
            </dd>
            <dt
              class=""
            >
              Insights id
            </dt>
            <dd
              class=""
            >
              Not available
            </dd>
            <dt
              class=""
            >
              Reporter
            </dt>
            <dd
              class=""
            >
              Not available
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`CollectionCard should not render hasInsightsId 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-7"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-7"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Collection information
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Insights client
            </dt>
            <dd
              class=""
            >
              <span>
                test-client
              </span>
            </dd>
            <dt
              class=""
            >
              Last check-in
            </dt>
            <dd
              class=""
            >
              01 Jun 2014
            </dd>
            <dt
              class=""
            >
              Registered
            </dt>
            <dd
              class=""
            >
              01 Apr 2014
            </dd>
            <dt
              class=""
            >
              Reporter
            </dt>
            <dd
              class=""
            >
              Not available
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`CollectionCard should not render hasLastCheckIn 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-5"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-5"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Collection information
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Insights client
            </dt>
            <dd
              class=""
            >
              <span>
                test-client
              </span>
            </dd>
            <dt
              class=""
            >
              Registered
            </dt>
            <dd
              class=""
            >
              01 Apr 2014
            </dd>
            <dt
              class=""
            >
              Insights id
            </dt>
            <dd
              class=""
            >
              Not available
            </dd>
            <dt
              class=""
            >
              Reporter
            </dt>
            <dd
              class=""
            >
              Not available
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`CollectionCard should not render hasRegistered 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-6"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-6"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Collection information
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Insights client
            </dt>
            <dd
              class=""
            >
              <span>
                test-client
              </span>
            </dd>
            <dt
              class=""
            >
              Last check-in
            </dt>
            <dd
              class=""
            >
              01 Jun 2014
            </dd>
            <dt
              class=""
            >
              Insights id
            </dt>
            <dd
              class=""
            >
              Not available
            </dd>
            <dt
              class=""
            >
              Reporter
            </dt>
            <dd
              class=""
            >
              Not available
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`CollectionCard should not render hasReporter 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-8"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-8"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Collection information
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Insights client
            </dt>
            <dd
              class=""
            >
              <span>
                test-client
              </span>
            </dd>
            <dt
              class=""
            >
              Last check-in
            </dt>
            <dd
              class=""
            >
              01 Jun 2014
            </dd>
            <dt
              class=""
            >
              Registered
            </dt>
            <dd
              class=""
            >
              01 Apr 2014
            </dd>
            <dt
              class=""
            >
              Insights id
            </dt>
            <dd
              class=""
            >
              Not available
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`CollectionCard should render correctly - no data 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-1"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-1"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Collection information
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Insights client
            </dt>
            <dd
              class=""
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
            <dt
              class=""
            >
              Last check-in
            </dt>
            <dd
              class=""
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
            <dt
              class=""
            >
              Registered
            </dt>
            <dd
              class=""
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
            <dt
              class=""
            >
              Insights id
            </dt>
            <dd
              class=""
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
            <dt
              class=""
            >
              Reporter
            </dt>
            <dd
              class=""
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`CollectionCard should render correctly with data 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-2"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-2"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Collection information
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Insights client
            </dt>
            <dd
              class=""
            >
              <span>
                test-client
              </span>
            </dd>
            <dt
              class=""
            >
              Last check-in
            </dt>
            <dd
              class=""
            >
              01 Jun 2014
            </dd>
            <dt
              class=""
            >
              Registered
            </dt>
            <dd
              class=""
            >
              01 Apr 2014
            </dd>
            <dt
              class=""
            >
              Insights id
            </dt>
            <dd
              class=""
            >
              Not available
            </dd>
            <dt
              class=""
            >
              Reporter
            </dt>
            <dd
              class=""
            >
              Not available
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`CollectionCard should render extra 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-9"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-9"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Collection information
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Insights client
            </dt>
            <dd
              class=""
            >
              <span>
                test-client
              </span>
            </dd>
            <dt
              class=""
            >
              Last check-in
            </dt>
            <dd
              class=""
            >
              01 Jun 2014
            </dd>
            <dt
              class=""
            >
              Registered
            </dt>
            <dd
              class=""
            >
              01 Apr 2014
            </dd>
            <dt
              class=""
            >
              Insights id
            </dt>
            <dd
              class=""
            >
              Not available
            </dd>
            <dt
              class=""
            >
              Reporter
            </dt>
            <dd
              class=""
            >
              Not available
            </dd>
            <dt
              class=""
            >
              something
            </dt>
            <dd
              class=""
            >
              test
            </dd>
            <dt
              class=""
            >
              with click
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//undefined"
              >
                1 tests
              </a>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;
